# widgetplots

./: .nojekyll  README.md  _quarto-book.yml  _quarto-slides.yml  _quarto.yml  global_params.yml  index.html  index.qmd  requirement_suggestions.txt  requirements.txt  search.json  setup.cfg  workflow.py  workflow_notebooks.py
.github/workflows/: quarto-publish.yml
_extensions/grantmcdermott/clean/: _extension.yml
binder/: environment.yml
conda-build/: build_env.yaml  meta.yaml
notebooks/: example.ipynb  showcase.html  showcase.ipynb  widgets.ipynb
reports/: example.qmd
site_libs/bootstrap/: bootstrap-3d9c598ea66ab454a4ee9a3b54d95116.min.css
slides/: example.qmd
template/: __index__.py  __init__.py  scripts.py
widgetplots/: __init__.py  bar.py
