[metadata]
name = template
version = 0.1.4
author = Your Name
author_email = your@email.com
description= Project description
url = https://github.com/munch-group/template
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires=file: requirements.txt

[options.package_data]
template =
    data/*.txt, data/*.csv, data/*.pickle

[options.entry_points]
console_scripts =
    hello = template.bar:baz
